--- a/daesung5class.html
+++ b/daesung5class.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>1학년 5반만을 위한 홈페이지 모음^^</h1>
-  <img src="hansim.jpg" width="450px">
+  <img src="ddd.jpg" width="450px">
   <p><a href="http://daeseong.hs.kr/" target="blank">학교 홈페이지</a></p>
   <p><a href="https://daeseong.riroschool.kr/" target="blank">대성 리로스쿨</a></p>
   <p><a href="https://band.us/band/70398063" target="blank">1학년 5반 band</a></p>
