--- a/수행평가 게시판.html
+++ b/수행평가 게시판.html
@@ -14,7 +14,7 @@
   <title>꿈과 희망이 넘치는 대성고 1학년 5반</title>
 </head>
 <body>
-  <h1>1학년 5반 커뮤너티</h1>
+  <h1><a href="daesung5class.html">1학년 5반 커뮤너티</a></h1>
   <img src="ddd.jpg" width="450px">
   <ol>
     <li><strong><a href="홈페이지 모음.html">홈페이지 모음</a></strong></li>
@@ -39,5 +39,25 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+<div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://daesung5class.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
 </html>
