--- a/홈페이지 모음.html
+++ b/홈페이지 모음.html
@@ -12,34 +12,28 @@
   </script>
   <meta charset="utf-8">
   <title>꿈과 희망이 넘치는 대성고 1학년 5반</title>
+  <style>
+  .saw{
+    color: gray;
+  }
+  #activate{
+    color: red;
+  }
+  </style>
 </head>
 <body>
-  <h1><a href="daesung5class.html">1학년 5반 커뮤너티</a></h1>
+  <h1><a href="daesung5class.html" style="color: black;text-decoration:none;">1학년 5반 커뮤니티</a></h1>
   <img src="ddd.jpg" width="450px">
   <ol>
-    <li><strong><a href="홈페이지 모음.html">홈페이지 모음</a></strong></li>
-    <li><strong><a href="수행평가 게시판.html">수행평가 게시판</a></strong></li>
-    <li><strong><a href="자유 게시판.html">자유 게시판</a></strong></li>
+    <li><strong><a href="홈페이지 모음.html" class="saw" id="activate">홈페이지 모음</a></strong></li>
+    <li><strong><a href="수행평가 게시판.html" class="saw">수행평가 게시판</a></strong></li>
+    <li><strong><a href="자유 게시판.html" class="saw">자유 게시판</a></strong></li>
   </ol>
-  <p><a href="http://daeseong.hs.kr/" target="blank">학교 홈페이지</a></p>
-  <p><a href="https://daeseong.riroschool.kr/" target="blank">대성 리로스쿨</a></p>
-  <p><a href="https://band.us/band/70398063" target="blank">1학년 5반 band</a></p>
-  <p><a href="https://band.us/band/70051655" target="blank">수학 band</a></p>
+  <p><a href="http://daeseong.hs.kr/" target="blank" class="saw">학교 홈페이지</a></p>
+  <p><a href="https://daeseong.riroschool.kr/" target="blank" class="saw">대성 리로스쿨</a></p>
+  <p><a href="https://band.us/band/70398063" target="blank" class="saw">1학년 5반 band</a></p>
+  <p><a href="https://band.us/band/70051655" target="blank" class="saw">수학 band</a></p>
   <p><strong><u>개선할 점이나 원하는 것이 있으면 10512 박규현에게...</u></strong> (참고로 웹사이트 하루 공부함)</p>
-  <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5b16a5cc8859f57bdc7bdd7b/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
-<p>
 <div id="disqus_thread"></div>
 <script>
 
@@ -60,6 +54,5 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</p>
 </body>
 </html>
