--- a/daesung5class.html
+++ b/daesung5class.html
@@ -13,24 +13,51 @@
   <meta charset="utf-8">
   <title>꿈과 희망이 넘치는 대성고 1학년 5반</title>
   <style>
+  body{
+    margin:0;
+  }
   .saw{
     color: gray;
+  }
+  h1{
+    font-size: 45px;
+    text-align: center;
+    border-bottom: 1px solid gray;
+    padding: 20px;
+    margin: 0;
+  }
+  ol{
+    border-right: 1px solid gray;
+    width: 120px;
+    margin: 0;
+    padding: 20px;
+  }
+  #grid{
+       display: grid;
+       grid-template-columns: 150px 1fr;}
+  #grid ol{
+    padding-left: 33px;
+  }
+  #grid #article{
+    padding-left: 40px;
   }
   </style>
 </head>
 <body>
-  <h1><a href="daesung5class.html" style="color: black;text-decoration:none;">1학년 5반 커뮤니티</a></h1>
-  <img src="ddd.jpg" width="450px">
+  <h1><a href="daesung5class.html" style="text-decoration:none;"><div style="color:pink;">1학년 5반</div><div style="color:skyblue;">커뮤니티</div></a></h1>
+<div id="grid">
   <ol>
     <li><strong><a href="홈페이지 모음.html" class="saw">홈페이지 모음</a></strong></li>
     <li><strong><a href="수행평가 게시판.html" class="saw">수행평가 게시판</a></strong></li>
     <li><strong><a href="자유 게시판.html" class="saw">자유 게시판</a></strong></li>
   </ol>
-  <p><a href="http://daeseong.hs.kr/" target="blank" class="saw">학교 홈페이지</a></p>
-  <p><a href="https://daeseong.riroschool.kr/" target="blank" class="saw">대성 리로스쿨</a></p>
-  <p><a href="https://band.us/band/70398063" target="blank" class="saw">1학년 5반 band</a></p>
-  <p><a href="https://band.us/band/70051655" target="blank" class="saw">수학 band</a></p>
-  <p><strong><u>개선할 점이나 원하는 것이 있으면 10512 박규현에게...</u></strong> (참고로 웹사이트 하루 공부함)</p>
+  <div id="article">
+    <h2 style="color: yellowgreen;">서문</h2>
+    <p>이 웹사이트는 여러분들이 즐겁고 편안하게 놀 공간을 마련하기 위하여 제작되었습니다.</p><p>비록 아직 제 실력이 부족해서 사용 가능한 기능이 많이 없습니다.</p>
+    <p>지금도 웹페이지에 대해서 열심히 학습하고 있고 앞으로도 그러겠습니다.</p><p><u>더욱더 발전하는 커뮤니티를 위해 댓글에 의견을 남겨주세요.</u></p><p>여러분의 소중한 의견 최대한 반영하도록 하겠습니다.</p>
+    <p><strong>-대전대성고등학교 박규현-</strong></p><p><strong>p.s 컨셉 한번 잡아봤으니까 뭐라 하지 마세요</strong></p>
+  </div>
+</div>
 <div id="disqus_thread"></div>
 <script>
 
