--- a/홈페이지 모음.html
+++ b/홈페이지 모음.html
@@ -12,28 +12,24 @@
   </script>
   <meta charset="utf-8">
   <title>꿈과 희망이 넘치는 대성고 1학년 5반</title>
-  <style>
-  .saw{
-    color: gray;
-  }
-  #activate{
-    color: red;
-  }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1><a href="daesung5class.html" style="color: black;text-decoration:none;">1학년 5반 커뮤니티</a></h1>
-  <img src="ddd.jpg" width="450px">
+  <h1><a href="daesung5class.html" style="text-decoration:none;"><div style="color:pink;">1학년 5반</div> <div style="color:skyblue">커뮤니티</div></a></h1>
+<div id="grid">
   <ol>
     <li><strong><a href="홈페이지 모음.html" class="saw" id="activate">홈페이지 모음</a></strong></li>
     <li><strong><a href="수행평가 게시판.html" class="saw">수행평가 게시판</a></strong></li>
     <li><strong><a href="자유 게시판.html" class="saw">자유 게시판</a></strong></li>
   </ol>
+  <div id="article">
   <p><a href="http://daeseong.hs.kr/" target="blank" class="saw">학교 홈페이지</a></p>
   <p><a href="https://daeseong.riroschool.kr/" target="blank" class="saw">대성 리로스쿨</a></p>
   <p><a href="https://band.us/band/70398063" target="blank" class="saw">1학년 5반 band</a></p>
   <p><a href="https://band.us/band/70051655" target="blank" class="saw">수학 band</a></p>
-  <p><strong><u>개선할 점이나 원하는 것이 있으면 10512 박규현에게...</u></strong> (참고로 웹사이트 하루 공부함)</p>
+  <p><strong><u>개선할 점이나 원하는 것이 있으면 10512 박규현에게...</u></strong></p>
+  </div>
+</div>
 <div id="disqus_thread"></div>
 <script>
 
