--- a/daesung5class.html
+++ b/daesung5class.html
@@ -12,36 +12,7 @@
   </script>
   <meta charset="utf-8">
   <title>꿈과 희망이 넘치는 대성고 1학년 5반</title>
-  <style>
-  body{
-    margin:0;
-  }
-  .saw{
-    color: gray;
-  }
-  h1{
-    font-size: 45px;
-    text-align: center;
-    border-bottom: 1px solid gray;
-    padding: 20px;
-    margin: 0;
-  }
-  ol{
-    border-right: 1px solid gray;
-    width: 120px;
-    margin: 0;
-    padding: 20px;
-  }
-  #grid{
-       display: grid;
-       grid-template-columns: 150px 1fr;}
-  #grid ol{
-    padding-left: 33px;
-  }
-  #grid #article{
-    padding-left: 40px;
-  }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="daesung5class.html" style="text-decoration:none;"><div style="color:pink;">1학년 5반</div><div style="color:skyblue;">커뮤니티</div></a></h1>
