--- a/daesung5class.html
+++ b/daesung5class.html
@@ -15,6 +15,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <input type="button" value="night mode" onclick="
+  document.querySelector('body').style.backgroundColor = 'black'
+  document.querySelector('body').style.color = 'white'
+  ">
+  <input type="button" value="day mode" onclick="
+  document.querySelector('body').style.backgroundColor = 'white'
+  document.querySelector('body').style.color = 'black'
+  ">
   <h1><a href="daesung5class.html" style="text-decoration:none;"><div style="color:pink;">1학년 5반</div><div style="color:skyblue;">커뮤니티</div></a></h1>
 <div id="grid">
   <ol>
@@ -26,7 +34,7 @@
     <h2 style="color: yellowgreen;">서문</h2>
     <p>이 웹사이트는 여러분들이 즐겁고 편안하게 놀 공간을 마련하기 위하여 제작되었습니다.</p><p>비록 아직 제 실력이 부족해서 사용 가능한 기능이 많이 없습니다.</p>
     <p>지금도 웹페이지에 대해서 열심히 학습하고 있고 앞으로도 그러겠습니다.</p><p><u>더욱더 발전하는 커뮤니티를 위해 댓글에 의견을 남겨주세요.</u></p><p>여러분의 소중한 의견 최대한 반영하도록 하겠습니다.</p>
-    <p><strong>-대전대성고등학교 박규현-</strong></p><p><strong>p.s 컨셉 한번 잡아봤으니까 뭐라 하지 마세요</strong></p>
+    <p><strong>-대전대성고등학교 박규현-</strong>
   </div>
 </div>
 <div id="disqus_thread"></div>
