--- a/홈페이지 모음.html
+++ b/홈페이지 모음.html
@@ -15,6 +15,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <input type="button" value="night mode" onclick="
+  document.querySelector('body').style.backgroundColor = 'black'
+  document.querySelector('body').style.color = 'white'
+  ">
+  <input type="button" value="day mode" onclick="
+  document.querySelector('body').style.backgroundColor = 'white'
+  document.querySelector('body').style.color = 'black'
+  ">
   <h1><a href="daesung5class.html" style="text-decoration:none;"><div style="color:pink;">1학년 5반</div> <div style="color:skyblue">커뮤니티</div></a></h1>
 <div id="grid">
   <ol>
