--- a/daesung5class.html
+++ b/daesung5class.html
@@ -15,14 +15,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <input type="button" value="night mode" onclick="
-  document.querySelector('body').style.backgroundColor = 'black'
-  document.querySelector('body').style.color = 'white'
-  ">
-  <input type="button" value="day mode" onclick="
-  document.querySelector('body').style.backgroundColor = 'white'
-  document.querySelector('body').style.color = 'black'
-  ">
+  <input type="button" value="야간" onclick="
+  var target = document.querySelector('body');
+  if(this.value === '야간'){
+    target.style.backgroundColor = 'black';
+    target.style.color = 'white';
+    this.value = '주간';
+  } else{
+    target.style.backgroundColor = 'white';
+    target.style.color = 'black';
+    this.value = '야간';
+    }
+    ">
   <h1><a href="daesung5class.html" style="text-decoration:none;"><div style="color:pink;">1학년 5반</div><div style="color:skyblue;">커뮤니티</div></a></h1>
 <div id="grid">
   <ol>
